[gd_scene load_steps=37 format=2]

[ext_resource path="res://Scripts/MovingPlatform.gd" type="Script" id=1]
[ext_resource path="res://Animations/Barrel_Animation/0051.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Star.tscn" type="PackedScene" id=3]
[ext_resource path="res://SFX/bump.wav" type="AudioStream" id=4]
[ext_resource path="res://Animations/Barrel_Animation/0052.png" type="Texture" id=5]
[ext_resource path="res://Animations/Barrel_Animation/0053.png" type="Texture" id=6]
[ext_resource path="res://Animations/Barrel_Animation/0049.png" type="Texture" id=7]
[ext_resource path="res://Animations/Barrel_Animation/0054.png" type="Texture" id=8]
[ext_resource path="res://Animations/Barrel_Animation/0032.png" type="Texture" id=9]
[ext_resource path="res://Animations/Barrel_Animation/0055.png" type="Texture" id=10]
[ext_resource path="res://Animations/Barrel_Animation/0045.png" type="Texture" id=11]
[ext_resource path="res://Animations/Barrel_Animation/0057.png" type="Texture" id=12]
[ext_resource path="res://Animations/Barrel_Animation/0043.png" type="Texture" id=13]
[ext_resource path="res://Animations/Barrel_Animation/0047.png" type="Texture" id=14]
[ext_resource path="res://Animations/Barrel_Animation/0034.png" type="Texture" id=15]
[ext_resource path="res://Animations/Barrel_Animation/0058.png" type="Texture" id=16]
[ext_resource path="res://Animations/Barrel_Animation/0059.png" type="Texture" id=17]
[ext_resource path="res://Animations/Barrel_Animation/0041.png" type="Texture" id=18]
[ext_resource path="res://Animations/Barrel_Animation/0056.png" type="Texture" id=19]
[ext_resource path="res://Animations/Barrel_Animation/0035.png" type="Texture" id=20]
[ext_resource path="res://Animations/Barrel_Animation/0037.png" type="Texture" id=21]
[ext_resource path="res://Animations/Barrel_Animation/0050.png" type="Texture" id=22]
[ext_resource path="res://Animations/Barrel_Animation/0031.png" type="Texture" id=23]
[ext_resource path="res://Animations/Barrel_Animation/0038.png" type="Texture" id=24]
[ext_resource path="res://Animations/Barrel_Animation/0039.png" type="Texture" id=25]
[ext_resource path="res://Animations/Barrel_Animation/0040.png" type="Texture" id=26]
[ext_resource path="res://Animations/Barrel_Animation/0042.png" type="Texture" id=27]
[ext_resource path="res://Animations/Barrel_Animation/0033.png" type="Texture" id=28]
[ext_resource path="res://Animations/Barrel_Animation/0036.png" type="Texture" id=29]
[ext_resource path="res://Animations/Barrel_Animation/0044.png" type="Texture" id=30]
[ext_resource path="res://Animations/Barrel_Animation/0046.png" type="Texture" id=31]
[ext_resource path="res://Animations/Barrel_Animation/0048.png" type="Texture" id=32]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 53.1746, 56.5256 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 144, 48 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 9 ), ExtResource( 28 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 29 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 18 ), ExtResource( 27 ), ExtResource( 13 ), ExtResource( 30 ), ExtResource( 11 ), ExtResource( 31 ), ExtResource( 14 ), ExtResource( 32 ), ExtResource( 7 ), ExtResource( 22 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 19 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="MovingPlat" type="Node2D"]
scale = Vector2( 0.475428, 0.628109 )
script = ExtResource( 1 )
move_to = Vector2( 800, 0 )

[node name="PlatKBody" type="KinematicBody2D" parent="."]
motion/sync_to_physics = true

[node name="Star" parent="PlatKBody" instance=ExtResource( 3 )]
position = Vector2( 50.4808, 12.7366 )
scale = Vector2( 2.8703, -0.966714 )

[node name="CollisionShape2D" parent="PlatKBody/Star" index="0"]
position = Vector2( -17.5873, 13.1752 )
shape = SubResource( 1 )

[node name="AnimatedSprite" parent="PlatKBody/Star" index="1"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatKBody"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="PlatKBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatKBody/Area2D"]
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PlatKBody"]
scale = Vector2( 0.345084, 0.274258 )
frames = SubResource( 4 )
frame = 15
playing = true

[node name="MoveTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "SFX"
[connection signal="area_entered" from="PlatKBody/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="PlatKBody/Area2D" to="." method="_on_Area2D_body_entered"]

[editable path="PlatKBody/Star"]
